# SEO-Auditor

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.production.yaml  render.yaml
alembic/: env.py
alembic/versions/: 20260311_0001_initial_schema.py  20260311_0002_audit_progress_fields.py  20260311_0003_audit_phase_timestamps.py
app/: __init__.py  config.py  db.py  dependencies.py  logging.py  main.py
app/audit_engine/: __init__.py  service.py  types.py
app/audit_engine/analyzers/: images.py  performance.py  seo.py
app/audit_engine/crawler/: __init__.py  service.py
app/audit_engine/integrations/: pagespeed.py
app/audit_engine/parsers/: html_parser.py
app/audit_engine/reporters/: service.py
app/audit_engine/scoring/: service.py
app/audit_engine/utils/: __init__.py  text.py  url_tools.py
app/models/: __init__.py  asset_record.py  audit_issue.py  audit_run.py  page_audit_result.py  user.py  website_project.py
app/routes/: api.py  pages.py
app/schemas/: audit.py
app/services/: audits.py  dashboard.py  execution.py  projects.py  report_storage.py
app/static/css/: app.css
app/templates/: audit_progress.html  audit_results.html  base.html  dashboard.html  history.html  new_audit.html  reports_index.html
app/templates/partials/: sidebar.html
app/templates/reports/: report.html
app/workers/: queue.py  runner.py  tasks.py
docker/: Dockerfile
scripts/: seed_dev_data.py  start_web.sh  start_worker.sh
tests/: conftest.py  test_pages.py  test_parser.py
